--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
+.page-heading{
+height: 59px !important;
+margin-left: 4% !important; 
+margin-right: 0% !important; 
+width:88% !important;
+text-decoration:underline !important;
+text-transform:uppercase !important;
+}
+
 .topnav {
   overflow: hidden;
  background-color:#e84c4c;
