--- a/superadmin/mystyle.css
+++ b/superadmin/mystyle.css
@@ -9,3 +9,10 @@ max-height:100%;
 align-items:center; 
 justify-content:center;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
+}
