--- a/style/style.css
+++ b/style/style.css
@@ -468,7 +468,7 @@ border:1px dashed !important;
 
 .instruction h3{
 color:#84b34d !important; 
-text-align:center !important;
+margin-left:15px !important;
 }
 
 .instruction ul{
